--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
             <table cellpadding="0" cellspacing="0" border="1" width="100%" align="center" style="background-color: transparent;">
                 <tr valign="middle" align="center" style="width: 100%;">
                     <td valign="top" align="left" style="background-color: transparent; color: #000000;width: 100%;">
-                        <div id="inicio" style="position:relative; top:0; left:0px;vertical-align: middle;height: 100%;">
+                        <div id="inicio" style="position:absolute; top:0; left:0px;vertical-align: middle;height: 100%;">
                             <table cellpadding="0" cellspacing="0" border="2" width="100%" align="center" style="background-color:transparent;">
                                 <td width="100%" style="background-color: transparent;" valign="middle">
                                     <img id="logo" src="img/logo.png" align="center" width="520px" height="389px" border="none" onclick="mostrarMenu();" />
@@ -43,7 +43,7 @@
                         </div>
 
                         <!-- MENU -->
-                        <div id="menu" style="position:relative; top:0; left:0px; visibility: hidden; background-color: transparent;">
+                        <div id="menu" style="position:absolute; top:0; left:0px; visibility: hidden; background-color: transparent;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" align="center" style="background-color:transparent;">
                                 <tr>
                                     <td style="background-color: transparent;" align="middle">
@@ -66,7 +66,7 @@
                         </div>
 
                         <!-- INTRO AUDIO -->
-                        <div id="mostrarAudio" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarAudio" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#505D76;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -82,7 +82,7 @@
 
 
                         <!-- INTRO VIDEO -->
-                        <div id="mostrarVideo" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarVideo" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#3398FF;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -98,7 +98,7 @@
 
 
                         <!-- INTRO TEXT -->
-                        <div id="mostrarText" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarText" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#8CAD07;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -115,7 +115,7 @@
 
 
                         <!-- INTRO PHOTO -->
-                        <div id="mostrarPhoto" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarPhoto" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#CA3749;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -132,7 +132,7 @@
 
 
                         <!-- BOTONES OK / CANCEL -->
-                        <div id="mostrarButtonsOK" style="position:relative; top:900px; left:100px; visibility: hidden;">
+                        <div id="mostrarButtonsOK" style="position:absolute; top:900px; left:100px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" align="center" style="background-color: lightgrey;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
