--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
                                         <img id="micro" src="img/micro.png" align="center" width="100px" height="100px" border="none" onclick="mostrarAudio();" />
                                     </td>
                                     <td style="background-color: transparent;" align="middle">
-                                        <img id="audio" src="img/video.png" align="center" width="100px" height="100px" border="none" onclick="mostrarVideo();" />
+                                        <img id="audio" src="img/video.png" align="center" width="100px" height="100px" border="none" onclick="alert('antes de mostrarVideo();');mostrarVideo();" />
                                     </td>
                                     <td style="background-color: transparent;" align="middle">
                                         <img id="text" src="img/text.png" align="center" width="100px" height="100px" border="none" onclick="mostrarText();" />
