--- a/www/index.html
+++ b/www/index.html
@@ -30,11 +30,12 @@
         <title>MyN App</title>
     </head>
     <body>
-        <div class="app" style="position:relative; top:0px; left: 0px;width: 100%; height: 80%; overflow-x: hidden; overflow-y: hidden; " align="center">
+        <!-- Tamaño FNAC5 540 X 960 -->
+        <div class="app" style="position:absolute; top:0px; left: 0px;width: 100%; height: 80%; overflow-x: hidden; overflow-y: hidden; " align="center">
             <table cellpadding="0" cellspacing="0" border="1" width="100%" align="center" style="background-color: transparent; ">
                 <tr valign="middle" align="center" style="width: 100%;">
                     <td valign="top" align="left" style="background-color: transparent; color: #000000;width: 100%;">
-                        <div id="inicio" style="position:relative; top:0; left:0px;vertical-align: middle;height: 100%;">
+                        <div id="inicio" style="position:absolute; top:0; left:0px;vertical-align: middle;height: 100%;">
                             <table cellpadding="0" cellspacing="0" border="0" width="100%" align="center" style="background-color:transparent;">
                                 <td width="100%" style="background-color: transparent;" valign="middle">
                                     <img id="logo" src="img/logo.png" align="center" width="520px" height="389px" border="none" onclick="mostrarMenu();" />
@@ -43,14 +44,14 @@
                         </div>
 
                         <!-- MENU -->
-                        <div id="menu" style="position:relative; top:0; left:0px; visibility: hidden; background-color: transparent; vertical-align: top; height: auto;">
+                        <div id="menu" style="position:absolute; top:0; left:0px; visibility: hidden; background-color: transparent; vertical-align: top; height: auto;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" align="center" style="background-color:transparent;">
                                 <tr>
                                     <td style="background-color: transparent;" align="middle">
                                         <img id="micro" src="img/micro.png" align="center" width="100px" height="100px" border="none" onclick="mostrarAudio();" />
                                     </td>
                                     <td style="background-color: transparent;" align="middle">
-                                        <img id="audio" src="img/video.png" align="center" width="100px" height="100px" border="none" onclick="alert('antes de mostrarVideo();');mostrarVideo();" />
+                                        <img id="audio" src="img/video.png" align="center" width="100px" height="100px" border="none" onclick="mostrarVideo();" />
                                     </td>
                                     <td style="background-color: transparent;" align="middle">
                                         <img id="text" src="img/text.png" align="center" width="100px" height="100px" border="none" onclick="mostrarText();" />
@@ -66,7 +67,7 @@
                         </div>
 
                         <!-- INTRO AUDIO -->
-                        <div id="mostrarAudio" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarAudio" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#505D76;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -82,7 +83,7 @@
 
 
                         <!-- INTRO VIDEO -->
-                        <div id="mostrarVideo" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarVideo" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#3398FF;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -98,7 +99,7 @@
 
 
                         <!-- INTRO TEXT -->
-                        <div id="mostrarText" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarText" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#8CAD07;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -115,7 +116,7 @@
 
 
                         <!-- INTRO PHOTO -->
-                        <div id="mostrarPhoto" style="position:relative; top:150px; left:120px; visibility: hidden;">
+                        <div id="mostrarPhoto" style="position:absolute; top:150px; left:120px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="500px" align="center" style="background-color:#CA3749;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -132,7 +133,7 @@
 
 
                         <!-- BOTONES OK / CANCEL -->
-                        <div id="mostrarButtonsOK" style="position:relative; top:900px; left:100px; visibility: hidden;">
+                        <div id="mostrarButtonsOK" style="position:absolute; top:900px; left:100px; visibility: hidden;">
                             <table valign="top" cellpadding="0" cellspacing="0" border="0" width="100%" align="center" style="background-color: lightgrey;">
                                 <tr>
                                     <td style="height: 50px;">&nbsp;&nbsp;&nbsp;</td>
@@ -156,6 +157,7 @@
         <script type="text/javascript" src="js/menu.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/photo.js"></script>
+        <script type="text/javascript" src="js/video.js"></script>
         <!--<script type="text/javascript" src="js/audio.js"></script>-->
         <!--
         <script type="text/javascript">
