--- a/www/index.html
+++ b/www/index.html
@@ -32,14 +32,8 @@
     <body>
         <!-- Tamaño FNAC5 540 X 960 -->
         <div class="app" id="principal" style="position:relative; top:90px; left:195px;width: 420px; height: 760px; overflow-x: hidden; overflow-y: hidden;background-color: transparent; border-style: solid;border-width: 1px;" align="center">
-            <div id="inicio" style="position:absolute; top:200px; left:90px;vertical-align: middle;background-color: #bbffbb;">
+            <div id="inicio" style="position:absolute; top:200px; left:90px;vertical-align: middle;background-color: transparent;">
                 <img id="logo" src="img/logo.png" align="center" width="400px" height="299px" border="none" onclick="mostrarMenu();" />
-<!--
-                <table cellpadding="0" cellspacing="0" border="0" width="100%" align="center" style="background-color:transparent;">
-                    <td width="100%" style="background-color: transparent;" valign="middle">
-                    </td>
-                </table>
-                -->
             </div>
             <div id="a5" style="position:absolute; top:10px; left:470px; visibility: visible; background-color: transparent;">
                 <img id="exit" src="img/exit.png" align="center" width="100px" height="100px" border="none" onclick="mostrarInicio();exitApp();" />
